--- a/kyverno-1.12.yaml
+++ b/kyverno-1.12.yaml
@@ -1,7 +1,7 @@
 package:
   name: kyverno-1.12
   version: 1.12.6
-  epoch: 0
+  epoch: 1
   description: Kubernetes Native Policy Management
   copyright:
     - license: Apache-2.0
@@ -45,7 +45,7 @@ pipeline:
   - uses: strip
 
 subpackages:
-  - name: kyverno-init-container-1.12
+  - name: ${{package.name}}-init-container
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -58,7 +58,7 @@ subpackages:
         - runs: |
             kyvernopre --help
 
-  - name: kyverno-reports-controller-1.12
+  - name: ${{package.name}}-reports-controller
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -71,7 +71,7 @@ subpackages:
         - runs: |
             reports-controller --help
 
-  - name: kyverno-background-controller-1.12
+  - name: ${{package.name}}-background-controller
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -84,7 +84,7 @@ subpackages:
         - runs: |
             background-controller --help
 
-  - name: kyverno-cleanup-controller-1.12
+  - name: ${{package.name}}-cleanup-controller
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -97,7 +97,7 @@ subpackages:
         - runs: |
             cleanup-controller --help
 
-  - name: kyverno-cli-1.12
+  - name: ${{package.name}}-cli
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
