--- a/apache-arrow.yaml
+++ b/apache-arrow.yaml
@@ -1,7 +1,7 @@
 package:
   name: apache-arrow
   version: 18.0.0
-  epoch: 1
+  epoch: 0
   description: "multi-language toolbox for accelerated data interchange and in-memory processing"
   copyright:
     - license: Apache-2.0
@@ -223,8 +223,7 @@ update:
   ignore-regex-patterns:
     - 'js-'
     - '.*\.dev$'
-  github:
-    use-tag: true
+  git:
     identifier: apache/arrow
     strip-prefix: apache-arrow-
-    tag-filter: apache-arrow-
+    tag-filter-prefix: apache-arrow-
