refactor(datadog-agent): install binaries at expected paths
Binaries were installed at /usr/bin at which path the agent never expects,
whether running in oci container or not.
It makes sense to install binaries and data at default upstream expected
paths by default

Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -182,37 +182,45 @@ pipeline:
         --embedded-path /usr/lib
 
   - runs: |
-      install -Dm755 bin/agent/agent ${{targets.destdir}}/usr/bin/agent
+      mkdir -p \
+        ${{targets.contextdir}}/opt/datadog-agent/bin/agent
+        ${{targets.contextdir}}/opt/datadog-agent/embedded/bin
+
+      install -Dm755 bin/agent/agent ${{targets.contextdir}}/opt/datadog-agent/bin/agent
       # *-agent is just a symlink to the "agent" multicall
-      ln -s agent ${{targets.destdir}}/usr/bin/process-agent
-      ln -s agent ${{targets.destdir}}/usr/bin/security-agent
-      ln -s agent ${{targets.destdir}}/usr/bin/trace-agent
-      ln -s agent ${{targets.destdir}}/usr/bin/system-probe
+      ln -s agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/process-agent
+      ln -s agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/security-agent
+      ln -s agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/trace-agent
+      ln -s agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/system-probe
 
-      mkdir -p ${{targets.destdir}}/etc/datadog-agent/
+      ln -s /usr/bin/python3.11 ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/python3.11
+      ln -s python3.11 ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/python3
+      ln -s python3 ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/python
 
-      cp -r Dockerfiles/agent/s6-services ${{targets.destdir}}/etc/services.d
-      cp -r Dockerfiles/agent/cont-init.d ${{targets.destdir}}/etc/cont-init.d
+      mkdir -p ${{targets.contextdir}}/etc/datadog-agent/
 
-      install -Dm644 Dockerfiles/agent/datadog-docker.yaml ${{targets.destdir}}/etc/datadog-agent/datadog-docker.yaml
-      install -Dm644 Dockerfiles/agent/datadog-ecs.yaml ${{targets.destdir}}/etc/datadog-agent/datadog-ecs.yaml
-      install -Dm644 bin/agent/dist/datadog.yaml ${{targets.destdir}}/etc/datadog-agent/datadog.yaml.example
-      install -Dm644 bin/agent/dist/system-probe.yaml ${{targets.destdir}}/etc/datadog-agent/system-probe.yaml.example
-      install -Dm644 bin/agent/dist/security-agent.yaml ${{targets.destdir}}/etc/datadog-agent/security-agent.yaml.example
+      cp -r Dockerfiles/agent/s6-services ${{targets.contextdir}}/etc/services.d
+      cp -r Dockerfiles/agent/cont-init.d ${{targets.contextdir}}/etc/cont-init.d
 
-      install -Dm755 Dockerfiles/agent/entrypoint.sh ${{targets.destdir}}/bin/entrypoint.sh
-      install -Dm755 Dockerfiles/agent/probe.sh ${{targets.destdir}}/probe.sh
-      install -Dm755 Dockerfiles/agent/initlog.sh ${{targets.destdir}}/initlog.sh
-      install -Dm755 Dockerfiles/agent/secrets-helper/readsecret.py ${{targets.destdir}}/readsecret.py
-      install -Dm755 Dockerfiles/agent/secrets-helper/readsecret.sh ${{targets.destdir}}/readsecret.sh
-      install -Dm755 Dockerfiles/agent/secrets-helper/readsecret_multiple_providers.sh ${{targets.destdir}}/readsecret_multiple_providers.sh
+      install -Dm644 Dockerfiles/agent/datadog-docker.yaml ${{targets.contextdir}}/etc/datadog-agent/datadog-docker.yaml
+      install -Dm644 Dockerfiles/agent/datadog-ecs.yaml ${{targets.contextdir}}/etc/datadog-agent/datadog-ecs.yaml
+      install -Dm644 bin/agent/dist/datadog.yaml ${{targets.contextdir}}/etc/datadog-agent/datadog.yaml.example
+      install -Dm644 bin/agent/dist/system-probe.yaml ${{targets.contextdir}}/etc/datadog-agent/system-probe.yaml.example
+      install -Dm644 bin/agent/dist/security-agent.yaml ${{targets.contextdir}}/etc/datadog-agent/security-agent.yaml.example
 
-      cp -r bin/agent/dist/conf.d ${{targets.destdir}}/etc/datadog-agent/conf.d
+      install -Dm755 Dockerfiles/agent/entrypoint.sh ${{targets.contexdir}}/bin/entrypoint.sh
+      install -Dm755 Dockerfiles/agent/probe.sh ${{targets.contexdir}}/probe.sh
+      install -Dm755 Dockerfiles/agent/initlog.sh ${{targets.contextdir}}/initlog.sh
+      install -Dm755 Dockerfiles/agent/secrets-helper/readsecret.py ${{targets.contextdir}}/readsecret.py
+      install -Dm755 Dockerfiles/agent/secrets-helper/readsecret.sh ${{targets.contextdir}}/readsecret.sh
+      install -Dm755 Dockerfiles/agent/secrets-helper/readsecret_multiple_providers.sh ${{targets.contextdir}}/readsecret_multiple_providers.sh
+
+      cp -r bin/agent/dist/conf.d ${{targets.contextdir}}/etc/datadog-agent/conf.d
 
       # Setup s3-overlay overrides
-      mkdir -p ${{targets.destdir}}/etc/s6/init
-      cp -r Dockerfiles/agent/init-stage3 ${{targets.destdir}}/etc/s6/init/init-stage3
-      cp Dockerfiles/agent/init-stage3-host-pid ${{targets.destdir}}/etc/s6/init/init-stage3-host-pid
+      mkdir -p ${{targets.contextdir}}/etc/s6/init
+      cp -r Dockerfiles/agent/init-stage3 ${{targets.contextdir}}/etc/s6/init/init-stage3
+      cp Dockerfiles/agent/init-stage3-host-pid ${{targets.contextdir}}/etc/s6/init/init-stage3-host-pid
 
   - uses: strip
 
@@ -239,30 +247,18 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p \
-            ${{targets.subpkgdir}}/conf.d \
-            ${{targets.subpkgdir}}/checks.d \
-            ${{targets.subpkgdir}}/opt/datadog-agent/bin/agent/dist \
-            ${{targets.subpkgdir}}/opt/datadog-agent/embedded/bin
+            ${{targets.contextdir}}/conf.d \
+            ${{targets.contextdir}}/checks.d \
+            ${{targets.contextdir}}/opt/datadog-agent/bin/agent/dist
 
-          # several startup scripts assume binaries are located in /opt/datadog-agent/...
-          cp ${{targets.destdir}}/usr/bin/agent ${{targets.contextdir}}/opt/datadog-agent/bin/agent/agent
-          ln -s /opt/datadog-agent/bin/agent/agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/system-probe
-          ln -s /opt/datadog-agent/bin/agent/agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/security-agent
-          ln -s /opt/datadog-agent/bin/agent/agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/process-agent
-          ln -s /opt/datadog-agent/bin/agent/agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/trace-agent
+          cp -r /opt/datadog-agent/embedded/share ${{targets.contextdir}}/opt/datadog-agent/embedded/share
 
-          ln -s /usr/bin/python3.11 ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/python3.11
-          ln -s python3.11 ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/python3
-          ln -s python3 ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/python
+          cp -r bin/agent/dist/checks ${{targets.contextdir}}/opt/datadog-agent/bin/agent/dist/
+          install -Dm644 bin/agent/dist/config.py ${{targets.contextdir}}/opt/datadog-agent/bin/agent/dist/config.py
+          cp -r bin/agent/dist/utils ${{targets.contextdir}}/opt/datadog-agent/bin/agent/dist/
+          cp -r bin/agent/dist/views ${{targets.contextdir}}/opt/datadog-agent/bin/agent/dist/
 
-          cp -r /opt/datadog-agent/embedded/share ${{targets.subpkgdir}}/opt/datadog-agent/embedded/share
-
-          cp -r bin/agent/dist/checks ${{targets.subpkgdir}}/opt/datadog-agent/bin/agent/dist/
-          install -Dm644 bin/agent/dist/config.py ${{targets.subpkgdir}}/opt/datadog-agent/bin/agent/dist/config.py
-          cp -r bin/agent/dist/utils ${{targets.subpkgdir}}/opt/datadog-agent/bin/agent/dist/
-          cp -r bin/agent/dist/views ${{targets.subpkgdir}}/opt/datadog-agent/bin/agent/dist/
-
-          cp -r Dockerfiles/agent/entrypoint.d ${{targets.subpkgdir}}/opt/entrypoints
+          cp -r Dockerfiles/agent/entrypoint.d ${{targets.contextdir}}/opt/entrypoints
 
   - name: datadog-agent-core-integrations
     dependencies:
