test(datadog-agent): add test for subcommands
Subcommands like integration expect binaries and data at specific paths

Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -545,6 +545,9 @@ test:
     - name: Ensure the agent's requirements.txt for integrations is included
       runs: |
         ls /opt/datadog-agent/requirements-agent-release.txt
+    - name: Ensure the agent integration subcommand works
+      runs: |
+        agent integration freeze >/dev/null
     - name: Ensure checks can be loaded
       runs: |
         python -c "import datadog_checks.base"
