chore(datadog-agent): fix typo
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -183,15 +183,15 @@ pipeline:
 
   - runs: |
       mkdir -p \
-        ${{targets.contextdir}}/opt/datadog-agent/bin/agent
+        ${{targets.contextdir}}/opt/datadog-agent/bin/agent \
         ${{targets.contextdir}}/opt/datadog-agent/embedded/bin
 
       install -Dm755 bin/agent/agent ${{targets.contextdir}}/opt/datadog-agent/bin/agent
       # *-agent is just a symlink to the "agent" multicall
-      ln -s agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/process-agent
-      ln -s agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/security-agent
-      ln -s agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/trace-agent
-      ln -s agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/system-probe
+      ln -s /opt/datadog-agent/bin/agent/agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/process-agent
+      ln -s /opt/datadog-agent/bin/agent/agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/security-agent
+      ln -s /opt/datadog-agent/bin/agent/agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/trace-agent
+      ln -s /opt/datadog-agent/bin/agent/agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/system-probe
 
       ln -s /usr/bin/python3.11 ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/python3.11
       ln -s python3.11 ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/python3
@@ -208,8 +208,8 @@ pipeline:
       install -Dm644 bin/agent/dist/system-probe.yaml ${{targets.contextdir}}/etc/datadog-agent/system-probe.yaml.example
       install -Dm644 bin/agent/dist/security-agent.yaml ${{targets.contextdir}}/etc/datadog-agent/security-agent.yaml.example
 
-      install -Dm755 Dockerfiles/agent/entrypoint.sh ${{targets.contexdir}}/bin/entrypoint.sh
-      install -Dm755 Dockerfiles/agent/probe.sh ${{targets.contexdir}}/probe.sh
+      install -Dm755 Dockerfiles/agent/entrypoint.sh ${{targets.contextdir}}/bin/entrypoint.sh
+      install -Dm755 Dockerfiles/agent/probe.sh ${{targets.contextdir}}/probe.sh
       install -Dm755 Dockerfiles/agent/initlog.sh ${{targets.contextdir}}/initlog.sh
       install -Dm755 Dockerfiles/agent/secrets-helper/readsecret.py ${{targets.contextdir}}/readsecret.py
       install -Dm755 Dockerfiles/agent/secrets-helper/readsecret.sh ${{targets.contextdir}}/readsecret.sh
@@ -249,6 +249,7 @@ subpackages:
           mkdir -p \
             ${{targets.contextdir}}/conf.d \
             ${{targets.contextdir}}/checks.d \
+            ${{targets.contextdir}}/opt/datadog-agent/embedded/bin \
             ${{targets.contextdir}}/opt/datadog-agent/bin/agent/dist
 
           cp -r /opt/datadog-agent/embedded/share ${{targets.contextdir}}/opt/datadog-agent/embedded/share
