--- a/kyverno-1.12.yaml
+++ b/kyverno-1.12.yaml
@@ -1,7 +1,7 @@
 package:
   name: kyverno-1.12
   version: 1.12.6
-  epoch: 1
+  epoch: 0
   description: Kubernetes Native Policy Management
   copyright:
     - license: Apache-2.0
@@ -10,6 +10,12 @@ package:
       - ca-certificates-bundle
     provides:
       - kyverno=${{package.full-version}}
+
+var-transforms:
+  - from: ${{package.name}}
+    match: '.*-(\d+\.\d+).*'
+    replace: '$1'
+    to: major-minor-version
 
 environment:
   contents:
@@ -45,7 +51,7 @@ pipeline:
   - uses: strip
 
 subpackages:
-  - name: ${{package.name}}-init-container
+  - name: kyverno-init-container-${{vars.major-minor-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -58,7 +64,7 @@ subpackages:
         - runs: |
             kyvernopre --help
 
-  - name: ${{package.name}}-reports-controller
+  - name: kyverno-reports-controller-${{vars.major-minor-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -71,7 +77,7 @@ subpackages:
         - runs: |
             reports-controller --help
 
-  - name: ${{package.name}}-background-controller
+  - name: kyverno-background-controller-${{vars.major-minor-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -84,7 +90,7 @@ subpackages:
         - runs: |
             background-controller --help
 
-  - name: ${{package.name}}-cleanup-controller
+  - name: kyverno-cleanup-controller-${{vars.major-minor-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -97,7 +103,7 @@ subpackages:
         - runs: |
             cleanup-controller --help
 
-  - name: ${{package.name}}-cli
+  - name: kyverno-cli-${{vars.major-minor-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
