--- a/openssl.yaml
+++ b/openssl.yaml
@@ -2,7 +2,7 @@
 package:
   name: openssl
   version: 3.4.0
-  epoch: 1
+  epoch: 2
   description: "the OpenSSL cryptography suite"
   copyright:
     - license: Apache-2.0
@@ -15,6 +15,12 @@ package:
   dependencies:
     runtime:
       - openssl-provider-legacy
+      # Melange will automatically add a dependency on 'so:libcrypto.so.3' and 'so:libssl.so.3' via SCA
+      # However, the version of OpenSSL must match exactly or the CLI will crash due to missing symbols
+      # Example: '/usr/lib/libcrypto.so.3: version `OPENSSL_3.4.0' not found (required by openssl)'
+      # To avoid this, we explicitly pin the versions of libcrypto3 and libssl3 to match the CLI version
+      - libcrypto3=${{package.full-version}}
+      - libssl3=${{package.full-version}}
 
 environment:
   contents:
