--- a/jruby-9.4.yaml
+++ b/jruby-9.4.yaml
@@ -13,6 +13,7 @@ environment:
   contents:
     packages:
       - bash
+      - build-base
       - busybox
       - ca-certificates-bundle
       - maven
