--- a/freerdp.yaml
+++ b/freerdp.yaml
@@ -36,6 +36,8 @@ environment:
       - openssf-compiler-options
       - openssl-dev>3
       - samurai
+  environment:
+    CFLAGS: -Wno-unused-variable -Wno-int-conversion -Wno-incompatible-pointer-types
 
 pipeline:
   - uses: git-checkout
