--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -193,10 +193,6 @@ pipeline:
       ln -s /opt/datadog-agent/bin/agent/agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/trace-agent
       ln -s /opt/datadog-agent/bin/agent/agent ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/system-probe
 
-      ln -s /usr/bin/python3.11 ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/python3.11
-      ln -s python3.11 ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/python3
-      ln -s python3 ${{targets.contextdir}}/opt/datadog-agent/embedded/bin/python
-
       mkdir -p ${{targets.contextdir}}/etc/datadog-agent/
 
       cp -r Dockerfiles/agent/s6-services ${{targets.contextdir}}/etc/services.d
@@ -249,7 +245,7 @@ subpackages:
           mkdir -p \
             ${{targets.contextdir}}/conf.d \
             ${{targets.contextdir}}/checks.d \
-            ${{targets.contextdir}}/opt/datadog-agent/embedded/bin \
+            ${{targets.contextdir}}/opt/datadog-agent/embedded \
             ${{targets.contextdir}}/opt/datadog-agent/bin/agent/dist
 
           cp -r /opt/datadog-agent/embedded/share ${{targets.contextdir}}/opt/datadog-agent/embedded/share
@@ -548,18 +544,18 @@ test:
         ls /opt/datadog-agent/requirements-agent-release.txt
     - name: Ensure the agent integration subcommand works
       runs: |
-        agent integration freeze >/dev/null
+        /opt/datadog-agent/bin/agent/agent integration freeze >/dev/null
     - name: Ensure checks can be loaded
       runs: |
         python -c "import datadog_checks.base"
-        agent version
-        agent --help
-        process-agent --version
-        process-agent --help
-        security-agent --help
-        system-probe --help
-        trace-agent --version
-        trace-agent --help
+        /opt/datadog-agent/bin/agent/agent version
+        /opt/datadog-agent/bin/agent/agent --help
+        /opt/datadog-agent/embedded/bin/process-agent --version
+        /opt/datadog-agent/embedded/bin/process-agent --help
+        /opt/datadog-agent/embedded/bin/security-agent --help
+        /opt/datadog-agent/embedded/bin/system-probe --help
+        /opt/datadog-agent/embedded/bin/trace-agent --version
+        /opt/datadog-agent/embedded/bin/trace-agent --help
     - name: Ensure agent can be started
       runs: |
         cat > /etc/datadog-agent/datadog.yaml <<EOF
@@ -570,11 +566,11 @@ test:
 
         export DD_LOG_LEVEL=debug
         export DD_HOSTNAME_FILE=/etc/hostname
-        agent check uptime
-        agent check disk
+        /opt/datadog-agent/bin/agent/agent check uptime
+        /opt/datadog-agent/bin/agent/agent check disk
     - name: Validate multicall components are correctly linked
       runs: |
-        trace-agent version | grep trace-agent
-        security-agent version | grep "Security agent"
-        process-agent version | grep Agent
-        system-probe version | grep "System Probe"
+        /opt/datadog-agent/embedded/bin/trace-agent version | grep trace-agent
+        /opt/datadog-agent/embedded/bin/security-agent version | grep "Security agent"
+        /opt/datadog-agent/embedded/bin/process-agent version | grep Agent
+        /opt/datadog-agent/embedded/bin/system-probe version | grep "System Probe"
