--- a/systemd.yaml
+++ b/systemd.yaml
@@ -1,7 +1,7 @@
 package:
   name: systemd
   version: "257.3"
-  epoch: 0
+  epoch: 1
   description: The systemd System and Service Manager
   copyright:
     - license: LGPL-2.1-or-later AND GPL-2.0-or-later
@@ -393,8 +393,8 @@ subpackages:
         - agetty
     pipeline:
       - runs: |
-          mkdir -p ${{targets.subpkgdir}}/etc ${{targets.subpkgdir}}/sbin
-          ln -s ../usr/lib/systemd/systemd ${{targets.subpkgdir}}/sbin/init
+          mkdir -p ${{targets.subpkgdir}}/etc ${{targets.subpkgdir}}/usr/sbin
+          ln -s ../lib/systemd/systemd ${{targets.subpkgdir}}/usr/sbin/init
           ln -s ../run/systemd/resolve/stub-resolv.conf "${{targets.subpkgdir}}/etc/resolv.conf"
           echo "uninitialized" > "${{targets.subpkgdir}}/etc/machine-id"
     test:
