Implement usrmerge for binaries
This only converts /sbin directory alone.

This implements usrmerge for binaries. See:
- https://github.com/orgs/wolfi-dev/discussions/40270

--- a/wolfi-baselayout.yaml
+++ b/wolfi-baselayout.yaml
@@ -1,13 +1,18 @@
 package:
   name: wolfi-baselayout
   version: 20230201
-  epoch: 16
+  epoch: 17
   description: "baselayout data for Wolfi"
   copyright:
     - license: MIT
   dependencies:
     runtime:
       - ca-certificates-bundle
+    provides:
+      - merged-sbin
+      #- merged-bin
+      #- merged-usrsbin
+      #- merged-lib
 
 environment:
   contents:
@@ -38,9 +43,21 @@ pipeline:
 
   - name: Install
     runs: |
-      for i in bin dev etc etc/profile.d etc/secfixes.d home lib proc root var/log usr/bin usr/sbin usr/local/lib sys tmp var/spool/cron opt run usr/lib; do
+      for i in dev etc etc/profile.d etc/secfixes.d home lib proc root var/log usr/bin usr/local/lib sys tmp var/spool/cron opt run usr/lib; do
         mkdir -p "${{targets.destdir}}"/${i}
       done
+
+      # split-usr
+      # mkdir -p ${{targets.destdir}}/sbin
+      mkdir -p ${{targets.destdir}}/bin
+      mkdir -p ${{targets.destdir}}/usr/sbin
+      mkdir -p ${{targets.destdir}}/lib
+
+      # usr-merge
+      ln -s usr/bin ${{targets.destdir}}/sbin
+      # ln -s usr/bin ${{targets.destdir}}/bin
+      # ln -s bin ${{targets.destdir}}/usr/sbin
+      # ln -s usr/lib ${{targets.destdir}}/usr/lib
 
       for i in lib64 usr/lib64 usr/local/lib64; do
         ln -s lib "${{targets.destdir}}"/${i}
@@ -64,11 +81,6 @@ pipeline:
       chmod 755 "${{targets.destdir}}"/var/empty
 
 test:
-  environment:
-    contents:
-      packages:
-        - bash
-        - coreutils
   pipeline:
     - name: "Files exist"
       runs: |
@@ -76,7 +88,7 @@ test:
         test -f /etc/shadow
         test -f /etc/os-release
         test -f /etc/host.conf
-        test -f /var/empty
+        test -d /var/empty
     - name: "Scanner expectations"
       runs: |
         # This tells scanners which feed to look at.
