Maybe cleaner impl, only pass '--packages' or '--replaces' when supplied.
This will only pass '--packages=<list>' and '--replaces=<list>' if
they are given.  It will fail with a hopefully reasonable error
message if neither one are given

(It is my understanding that one of the two of these are required)

--- a/pipelines/go/bump.yaml
+++ b/pipelines/go/bump.yaml
@@ -35,8 +35,14 @@ inputs:
 
 pipeline:
   - runs: |
-      cd "${{inputs.modroot}}"
+      deps="${{inputs.deps}}"
+      replaces="${{inputs.replaces}}"
+      if [ -z "$deps" ] && [ -z "$replaces" ]; then
+        echo "Both 'deps' and 'replaces' are empty.  At least one is required."
+        exit 1
+      fi
 
+      cd "${{inputs.modroot}}"
       # todo rawlingsj: Remove this once we have a new gobump version that does this for us
       # if ${{inputs.go-version}} is not set, we use the go version of the current environment
       if [ -z "${{inputs.go-version}}" ]; then
@@ -51,8 +57,8 @@ pipeline:
 
       # We use the --tidy flag to run go mod tidy before and after in some cases (if old versions of go are used, we need to update the go.mod format)
       gobump \
-        --packages="${{inputs.deps}}" \
-        --replaces="${{inputs.replaces}}" \
+        ${deps:+--packages="$deps"} \
+        ${replaces:+--replaces="$replaces"} \
         --tidy="${{inputs.tidy}}" \
         --skip-initial-tidy="${{inputs.skip-initial-tidy}}" \
         --show-diff="${{inputs.show-diff}}" \
