--- a/runit.yaml
+++ b/runit.yaml
@@ -39,11 +39,10 @@ pipeline:
   - uses: autoconf/make
 
   - runs: |
-      install -d "${{targets.destdir}}"/sbin "${{targets.destdir}}"/usr/bin
+      install -d "${{targets.destdir}}"/usr/bin
       for i in chpst runit runit-init runsv runsvchdir runsvdir sv svlogd utmpset; do
-        install -m755 "$i" "${{targets.destdir}}"/sbin/$i
+        install -m755 "$i" "${{targets.destdir}}"/usr/bin/$i
       done
-      ln -sfv /sbin/runsvdir "${{targets.destdir}}"/usr/bin/runsvdir
       install -d "${{targets.destdir}}"/usr/share/man/man8
       cp -rf man/* "${{targets.destdir}}"/usr/share/man/man8
       mkdir -p "${{targets.destdir}}"/etc/service
