--- a/tini.yaml
+++ b/tini.yaml
@@ -5,6 +5,12 @@ package:
   description: A tiny but valid init for containers
   copyright:
     - license: MIT
+  dependencies:
+    provides:
+      - tini-compat=${{package.full-version}}
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -30,20 +36,13 @@ pipeline:
       cmake --build build --target all tini-static
 
   - runs: |
-      install -Dm755 build/tini ${{targets.destdir}}/sbin/tini
+      install -Dm755 build/tini ${{targets.destdir}}/usr/bin/tini
 
 subpackages:
   - name: tini-static
     pipeline:
-      - runs: install -Dm755 build/tini-static ${{targets.subpkgdir}}/sbin/tini-static
+      - runs: install -Dm755 build/tini-static ${{targets.subpkgdir}}/usr/bin/tini-static
     description: Static build of tini
-
-  - name: tini-compat
-    pipeline:
-      - runs: |
-          mkdir -p ${{targets.contextdir}}/usr/bin
-          ln -sf /sbin/tini ${{targets.contextdir}}/usr/bin/tini
-    description: Compatibility symlink for tini
 
 update:
   enabled: true
