Revert "druid/32.0.0 package update (#42292)"
This reverts commit c8d1f75f744fd5fcfd33a2c1d24e3cb31f69dae8.

--- a/druid.yaml
+++ b/druid.yaml
@@ -1,6 +1,6 @@
 package:
   name: druid
-  version: "32.0.0"
+  version: 31.0.1
   epoch: 0
   description: Apache Druid is a high performance real-time analytics database.
   copyright:
@@ -29,7 +29,7 @@ pipeline:
     with:
       repository: https://github.com/apache/druid.git
       tag: druid-${{package.version}}
-      expected-commit: 960e85112c89304a6f7e2ac64b2ba3b453743346
+      expected-commit: 520482cb9638e452b0553595b4f29bb397a63758
 
   - uses: maven/pombump
 
