add proper test in post section
Signed-off-by: YashPimple <yashpimple22@gmail.com>

--- a/op-geth.yaml
+++ b/op-geth.yaml
@@ -151,6 +151,11 @@ subpackages:
             rlpdump -hex c0 | grep -q '\[\]' && echo "rlpdump hex test passed" || { echo "rlpdump hex test failed"; exit 1; }
 
 test:
+  environment:
+    contents:
+      packages:
+        - curl
+        - jq
   pipeline:
     - name: version and help tests for geth
       runs: |
@@ -172,14 +177,16 @@ test:
           denied
         post: |
           sleep 5
-          # Check if the process is running
-          if ps aux | grep -q "[g]eth"; then
-            echo "Geth started successfully"
+          BLOCK_NUMBER=$(curl -s -X POST -H "Content-Type: application/json" --data '{"jsonrpc":"2.0","method":"eth_blockNumber","params":[],"id":1}' http://127.0.0.1:8545/ | jq -r '.result')
+
+          BLOCK_NUMBER_DECIMAL=$((BLOCK_NUMBER))
+
+          if [[ "$BLOCK_NUMBER" == "0x0" ]]; then
+            echo "Error: Block number is still 0x0, indicating no blocks have been mined."
+            exit 1  # Fail the pipeline
           else
-            echo "Failed to start Geth"
-            exit 1
+            echo "Success: Ethereum node is responding with block number $BLOCK_NUMBER (decimal: $BLOCK_NUMBER_DECIMAL)."
           fi
-          pkill -f geth
 
 update:
   enabled: true
