fluent-plugin-label-router: relax ruby3.2-fluentd version constraint

--- a/fluent-plugin-label-router.yaml
+++ b/fluent-plugin-label-router.yaml
@@ -2,7 +2,7 @@
 package:
   name: fluent-plugin-label-router
   version: "0.4.0_git20250214"
-  epoch: 0
+  epoch: 1
   description: Label-Router helps routing log messages based on their labels and namespace tag in a Kubernetes environment.
   copyright:
     - license: Apache-2.0
@@ -10,7 +10,7 @@ package:
     provides:
       - ruby3.2-fluent-plugin-label-router=${{package.full-version}}
     runtime:
-      - ruby3.2-fluentd<1.18
+      - ruby3.2-fluentd
       - ruby3.2-prometheus-client
 
 environment:
@@ -29,6 +29,10 @@ pipeline:
       expected-commit: 9ed269cc6e7eced5d91737ff5cb5e4519f50ba22
       repository: https://github.com/kube-logging/fluent-plugin-label-router
       branch: master
+
+  - uses: patch
+    with:
+      patches: relax-fluent-constraint.patch
 
   - uses: ruby/build
     with:
