--- a/zola.yaml
+++ b/zola.yaml
@@ -1,20 +1,10 @@
 package:
   name: zola
-  version: "0.20.0" # The next time we update, see if the cherry-picked patch can be removed now.
+  version: 0.20.0
   epoch: 0
-  description: "A fast static site generator in a single binary with everything built-in"
+  description: A fast static site generator in a single binary with everything built-in
   copyright:
     - license: MIT
-
-environment:
-  contents:
-    packages:
-      - build-base
-      - busybox
-      - ca-certificates-bundle
-      - cargo-auditable
-      - rust
-      - wolfi-base
 
 pipeline:
   - uses: git-checkout
@@ -26,10 +16,9 @@ pipeline:
   - uses: rust/cargobump
 
   - name: Configure and build
-    runs: |
-      cargo auditable build --release
-      mkdir -p ${{targets.destdir}}/usr/bin/
-      mv target/release/zola ${{targets.destdir}}/usr/bin/
+    uses: cargo/build
+    with:
+      output: zola
 
   - uses: strip
 
