--- a/grafana-oncall.yaml
+++ b/grafana-oncall.yaml
@@ -66,7 +66,8 @@ pipeline:
       - name: Mitigate CVEs
         runs: |
           # Mitigates CVE-2024-56374, CVE-2024-56201 and CVE-2024-56326
-          uv pip install --no-cache --no-compile --upgrade django==4.2.18 jinja2==3.1.5
+          # bump cryptography to 44.0.1 to address CVE-2024-12797 and GHSA-79v4-65xg-pq4g
+          uv pip install --no-cache --no-compile --upgrade django==4.2.18 jinja2==3.1.5 cryptography==44.0.1
       - name: Move venv
         runs: |
           mkdir -p ${{targets.destdir}}/usr/share/grafana-oncall/
